--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "availity-reactstrap-validation": "^2.0.2",
+    "availity-reactstrap-validation": "^2.3.0",
     "bootstrap": "^4.1.1",
     "escape-string-regexp": "^1.0.5",
     "form-serialize": "^0.7.2",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "prop-types": "^15.6.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-icons": "^2.2.7",
+    "react-moment": "^0.8.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
