--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
     "@emotion/core": "^10.0.0-beta.6",
     "availity-reactstrap-validation": "^2.3.0",
     "bootstrap": "^4.1.1",
+    "bootstrap-daterangepicker": "^3.0.3",
     "escape-string-regexp": "^1.0.5",
     "form-serialize": "^0.7.2",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
     "prop-types": "^15.6.1",
     "react": "^16.6.0",
+    "react-bootstrap-daterangepicker": "^4.1.0",
     "react-dom": "^16.5.2",
     "react-icons": "^2.2.7",
     "react-moment": "^0.8.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-select": "^2.1.1",
     "react-spinners": "^0.3.2",
     "react-table": "^6.8.6",
     "react-toastify": "^4.1.0",
